--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.0"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.2",
     "@angular/compiler-cli": "^2.3.1",
     "@types/firebase": "^2.4.31",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -40,9 +40,9 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.13",
-    "ts-node": "1.2.1",
+    "ts-node": "^2.1.0",
     "tslint": "^4.0.2",
-    "typescript": "~2.0.3",
+    "typescript": "^2.2.0",
     "webdriver-manager": "10.2.5"
   }
 }
