--- a/package.json
+++ b/package.json
@@ -13,37 +13,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "~3.4.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.0"
+    "@angular/animations": "^6.0.0-rc.5",
+    "@angular/common": "^6.0.0-rc.5",
+    "@angular/compiler": "^6.0.0-rc.5",
+    "@angular/core": "^6.0.0-rc.5",
+    "@angular/forms": "^6.0.0-rc.5",
+    "@angular/http": "^6.0.0-rc.5",
+    "@angular/platform-browser": "^6.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
+    "@angular/router": "^6.0.0-rc.5",
+    "core-js": "^2.5.3",
+    "rxjs": "^6.0.0-uncanny-rc.7",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/firebase": "^2.4.31",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "@angular-devkit/build-angular": "~0.5.7",
+    "@angular/cli": "^6.0.0-rc.5",
+    "@angular/compiler-cli": "^6.0.0-rc.5",
+    "@angular/language-service": "^6.0.0-rc.5",
+    "@types/firebase": "^3.2.1",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "^9.6.6",
+    "codelyzer": "~4.3.0",
+    "jasmine-core": "3.1.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.13",
-    "ts-node": "^2.1.0",
-    "tslint": "^4.0.2",
-    "typescript": "^2.2.0",
-    "webdriver-manager": "10.2.5"
+    "karma-jasmine": "^1.1.1",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "5.3.1",
+    "ts-node": "^6.0.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2",
+    "webdriver-manager": "12.0.6"
   }
 }
