--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.json",
+            "tsConfig": "src/tsconfig.app.json",
+            "polyfills": "src/polyfills.ts",
             "assets": [
               {
                 "glob": "**/*",
@@ -21,9 +22,14 @@
                 "output": "/assets"
               },
               {
-                "glob": "favicon.ico",
-                "input": "src",
-                "output": "/"
+                "glob": "**/*",
+                "input": "src/CNAME",
+                "output": "/CNAME"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/favicon.png",
+                "output": "/favicon.png"
               }
             ],
             "styles": [
@@ -32,6 +38,14 @@
             "scripts": []
           },
           "configurations": {
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
+            },
             "production": {
               "optimization": true,
               "outputHashing": "all",
@@ -57,6 +71,9 @@
             "browserTarget": "smcntyr.com:build"
           },
           "configurations": {
+            "hmr": {
+              "browserTarget": "smcntyr.com:build:hmr"
+            },
             "production": {
               "browserTarget": "smcntyr.com:build:production"
             }
@@ -73,6 +90,8 @@
           "options": {
             "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
               "src/styles.scss"
@@ -84,9 +103,14 @@
                 "output": "/assets"
               },
               {
-                "glob": "favicon.ico",
-                "input": "src",
-                "output": "/"
+                "glob": "**/*",
+                "input": "src/CNAME",
+                "output": "/CNAME"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/favicon.png",
+                "output": "/favicon.png"
               }
             ]
           }
@@ -94,8 +118,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [],
-            "exclude": []
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -116,8 +145,12 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [],
-            "exclude": []
+            "tsConfig": [
+              "e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
