--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "smcntyr.com",
   "version": "0.0.0",
   "license": "MIT",
-  "angular-cli": {},
   "scripts": {
-    "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
+    "ng": "ng",
+    "start": "ng serve --hmr",
+    "build": "ng build --prod",
     "test": "ng test",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "gh": "ng build -prod -aot -base-href 'https://seanmcintyre.github.io/smcntyr.com/'; ngh;"
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -27,25 +26,25 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.5.7",
     "@angular/cli": "^6.0.0-rc.5",
     "@angular/compiler-cli": "^6.0.0-rc.5",
     "@angular/language-service": "^6.0.0-rc.5",
-    "@types/firebase": "^3.2.1",
-    "@types/jasmine": "2.8.6",
-    "@types/node": "^9.6.6",
-    "codelyzer": "~4.3.0",
-    "jasmine-core": "3.1.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-remap-istanbul": "^0.6.0",
-    "protractor": "5.3.1",
-    "ts-node": "^6.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2",
-    "webdriver-manager": "12.0.6"
+    "@angularclass/hmr": "^2.1.3",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~9.4.7",
+    "codelyzer": "^4.2.1",
+    "jasmine-core": "~3.1.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^1.0.0",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2",
+    "@angular-devkit/build-angular": "~0.5.0"
   }
 }
