--- a/angular.json
+++ b/angular.json
@@ -38,14 +38,6 @@
             "scripts": []
           },
           "configurations": {
-            "hmr": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.hmr.ts"
-                }
-              ]
-            },
             "production": {
               "optimization": true,
               "outputHashing": "all",
@@ -62,6 +54,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -71,11 +71,12 @@
             "browserTarget": "smcntyr.com:build"
           },
           "configurations": {
-            "hmr": {
-              "browserTarget": "smcntyr.com:build:hmr"
-            },
             "production": {
               "browserTarget": "smcntyr.com:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "smcntyr.com:build:hmr"
             }
           }
         },
