--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --hmr",
+    "start": "ng serve --configuration=hmr",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
